# amem

./: AGENTS.md  Cargo.toml  README.md
docs/ADR/: 001-file-system-strategy.md  002-utf8-unigram-fulltext-search.md  003-embedding-provider-ollama.md  004-single-binary-architecture.md  005-owner-profile-memory-model.md  006-recent-activity-and-proactive-questions.md  007-index-storage-and-incremental-rebuild.md  008-hybrid-ranking-and-context-assembly.md  009-language-selection.md  010-database-selection.md  011-cli-structure-and-convenience-commands.md  012-domain-oriented-get-set-cli.md  013-owner-agent-namespace-split.md  README.md
skills/.claude/skills/amem/: SKILL.md
src/: lib.rs  main.rs
src/templates/: IDENTITY.md
src/templates/agent/: IDENTITY.md  SOUL.md
src/templates/owner/: interests.md  personality.md  preferences.md  profile.md
tests/: cli.rs
