[package]
name = "amem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.42", default-features = true }
clap = { version = "4.5.46", features = ["derive"] }
globset = "0.4.16"
path-clean = "1.0.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
walkdir = "2.5.0"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.3"
predicates = "3.1.3"
